--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,40 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "express-rest-api",
+  "version": "1.0.0",
+  "description": "express-rest-api",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/TharindaNimnajith/af-final-2021"
+  },
+  "keywords": [
+    "IT18149654",
+    "AF",
+    "SLIIT",
+    "Express",
+    "Node",
+    "MongoDB",
+    "REST"
+  ],
+  "author": "IT18149654 - Tharinda Nimnajith Rajapaksha",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.3.1",
+    "mongoose": "^5.11.12",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
+    "node": "^15.4.0",
+    "nodemon": "^2.0.7"
   }
 }
