--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,48 @@
 {
-  "name": "af-final-2021",
-  "version": "0.1.0",
+  "name": "react-frontend",
+  "version": "1.0.0",
+  "description": "react-frontend",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/TharindaNimnajith/af-final-2021"
+  },
+  "keywords": [
+    "IT18149654",
+    "AF",
+    "SLIIT",
+    "React"
+  ],
+  "author": "IT18149654 - Tharinda Nimnajith Rajapaksha",
+  "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@2ui/create-react-component": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta1",
+    "formik": "^2.2.6",
+    "jquery": "^3.5.1",
+    "lodash.get": "^4.4.2",
+    "minimist": "^1.2.5",
+    "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "react-icons": "^4.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "reactstrap": "^8.8.1",
+    "sweetalert2": "^10.13.0",
+    "typescript": "^4.1.3",
+    "web-vitals": "^1.1.0",
+    "yup": "^0.32.8"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
