--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 ATLAS_URI=mongodb+srv://IT18149654:IT18149654@cluster0.ddiyj.mongodb.net/af-final-2021?retryWrites=true&w=majority
 PORT=5000
 DATABASE=af-final-2021
+PASSWORD=sliit123
