--- a/backend/package.json
+++ b/backend/package.json
@@ -36,5 +36,8 @@
     "multer": "^1.4.2",
     "node": "^15.4.0",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "nodemailer": "^6.4.17"
   }
 }
