--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "node": "^15.4.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "nodemailer": "^6.4.17"
