--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
@@ -67,5 +68,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-use": "^17.1.0"
   }
 }
