--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -39,6 +42,9 @@
     "react-router": "^5.2.0"
   },
   "devDependencies": {
-    "nodemailer": "^6.4.17"
+    "env-cmd": "^10.1.0",
+    "jest": "^26.6.3",
+    "nodemailer": "^6.4.17",
+    "supertest": "^6.1.3"
   }
 }
